syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.neshkeev.antifraud";

package com.github.neshkeev.antifraud;

service AntiFraud {
  rpc Decide(CheckRequest) returns (CheckResponse) {}
}

message CheckRequest {
  optional string from = 1;
  optional string to = 2;
  optional int32 amount = 3;
}

message CheckResponse {
  optional bool result = 1;
}
